@@ -116,7 +116,6 @@ int libfdata_btree_node_get_sub_node_data_range_by_mapped_index(
 
 int libfdata_btree_node_get_sub_node_data_range_by_key(
      libfdata_btree_node_t *node,
-     int start_sub_node_index,
      intptr_t *key_value,
      int (*key_value_compare_function)(
             intptr_t *first_key_value,
